@@ -1,5 +1,8 @@
 2008-11-19  Larry Jones  <lawrence.jones@siemens.com>
 
+	* entries.c (WriteTag): Remove any exiting file and recreate
+	rather than trying to overwrite (to avoid permission problems).
+
 	* sanity.sh (keyword-25): Protect keywords against accidental
 	expansion in sanity.sh itself.
 
